--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
+    "figlet": "^1.8.0",
     "jsonfile": "^6.1.0",
     "openai": "^4.70.2",
     "path": "^0.12.7"
