--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@inquirer/prompts": "^7.0.1",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "figlet": "^1.8.0",
