--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "inquirer": "^12.0.1",
     "jsonfile": "^6.1.0",
     "openai": "^4.70.2",
+    "ora": "^8.1.1",
     "path": "^0.12.7"
   }
 }
