--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonfile": "^6.1.0",
     "openai": "^4.70.2",
     "ora": "^8.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "readline": "^1.3.0"
   }
 }
