--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "openai": "^4.70.2",
     "ora": "^8.1.1",
     "path": "^0.12.7",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "wrap-ansi": "^9.0.0"
   }
 }
