--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gpt": "./bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "c043",
@@ -25,5 +25,9 @@
     "path": "^0.12.7",
     "readline": "^1.3.0",
     "wrap-ansi": "^9.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^11.6.0",
+    "sinon": "^20.0.0"
   }
 }
